# supersonic-moe

./: .coveragerc  .gitignore  .runenv.sh  AGENTS.md  HANDOFF.md  INDEX.md  Makefile  README.md  agent.md  benchmark_final.json  kernel_breakdown.json  manifest.json  mem_breakdown.json  profiling_output.json  pyproject.toml  requirements.txt  scoreboard.json  session42_benchmark.json  session45_benchmark.json
.claude/: INDEX.md  settings.local.json
.githooks/: pre-commit
assets/: INDEX.md
benchmarks/: INDEX.md  _cold_mem.sh  e2e_fp8_vs_bf16.py  mem_precision_remote.sh  moe-cute.py  nsys_remote_bench.sh
docs/: FP8_ARCH_SPEC.md  HANDOFF.md  INDEX.md  PADDLEFLEET_MIGRATION_S74.md  cute_dsl_optimization_guide.md  fp8_architecture_comparison.md  fp8_engineering_roadmap.md  fp8_full_chain_optimal.md  pad_audit_methodology.md  phase3_1_gemmdgated_fp8_preact.md  phase3_1_tma_fp8c_report.md  session35_report.md  (+5 more)
tests/reference_layers/standalone_moe_layer/: INDEX.md  pyproject.toml  setup.py
tests/reference_layers/standalone_moe_layer/moe_standalone/: INDEX.md  __init__.py  compat.py
tests/reference_layers/standalone_moe_layer/moe_standalone/moe/: INDEX.md  __init__.py  deep_ep_moe_layer.py  moe_statics.py  top2_gate.py
tests/reference_layers/standalone_moe_layer/moe_standalone/token_dispatcher/: INDEX.md  __init__.py  fp8_utils.py  fused_a2a.py  moe_utils.py  token_dispatcher.py
tests/reference_layers/standalone_moe_layer/scripts/: INDEX.md  verify_sonic_moe_interface.py
tests/reference_layers/standalone_moe_layer/tests/: INDEX.md  test_imports_and_interfaces.py
(+449 files in other folders)
